--- a/mon_site_cv2/web/style.css
+++ b/mon_site_cv2/web/style.css
@@ -12,7 +12,7 @@ body{
 
 /******** a tester********
 @import url(https://fonts.googleapis.com/css?family=Anaheim);
-
+*/
 *{
   margin: 0;
   padding: 0;
@@ -28,7 +28,7 @@ html,
 body{
 	min-height: 100%;
 }
-body{
+/*body{
 	background-image: radial-gradient(mintcream 0%, lightgray 100%);
 }
 h1{
@@ -46,7 +46,7 @@ h1{
 	height: 140px;
 	position: relative;
 	perspective: 1000px;
-}
+}*/
 #carousel{
 	width: 100%;
 	height: 100%;
@@ -78,13 +78,13 @@ h1{
 #carousel figure:nth-child(8) { transform: rotateY(280deg) translateZ(288px);}
 #carousel figure:nth-child(9) { transform: rotateY(320deg) translateZ(288px);}
 
-img{
-	-webkit-filter: grayscale(1);
+.slide{
+/*	-webkit-filter: grayscale(1);*/
 	cursor: pointer;
 	transition: all .5s ease;
 }
-img:hover{
-	-webkit-filter: grayscale(0);
+.slide:hover{
+	/* -webkit-filter: grayscale(0); */
   transform: scale(1.2,1.2);
 }
 
@@ -97,11 +97,11 @@ img:hover{
 	}
 }
 
-
+/*
 <h1>3d images gallery</h1>
   <div class="container">
 		<div id="carousel">
-			<figure><img src="http://lorempixel.com/186/116/nature/1" alt=""></figure>
+			<figure><img src="http://lorempixel.com/186/116/nature/1" alt="" class="slide"></figure>
 			<figure><img src="http://lorempixel.com/186/116/nature/2" alt=""></figure>
 			<figure><img src="http://lorempixel.com/186/116/nature/3" alt=""></figure>
 			<figure><img src="http://lorempixel.com/186/116/nature/4" alt=""></figure>
